[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
#opt-level = 3
#lto = true
strip = true

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
openssl = { version = "0.10" }
actix-files = "0.6.5"
serde = { version = "1", features = ["derive" ]}
config = "0.13"
json = "0.12.4"
#tokio = { version = "1.0", features = ["full"] }
#sqlx = { version = "0.7.4", default-features = false, features = ["runtime-tokio-rustls", "postgres"] }
sqlx = { version = "0.6.3", default-features = false, features = ["runtime-tokio-rustls", "postgres"] }
ssr_rs = "0.4.0"
